fix: education display on mobile

--- a/assets/css/critical/92-json-resume.css
+++ b/assets/css/critical/92-json-resume.css
@@ -3,5 +3,5 @@
 }
 
 .jr-education__item .jr__date-range {
-    visibility: hidden;
+    display: none;
 }
